@@ -6,7 +6,7 @@ import ru.gvrn.journeyman.outfits.api.Outfit;
 import ru.gvrn.journeyman.properties.api.Property;
 import ru.gvrn.journeyman.properties.types.IntegerProperty;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -22,7 +22,7 @@ public class OutfitItem extends Item implements Outfit<OutfitItem> {
   private final IntegerProperty maxDexBonus;
 
   @Setter
-  private List<String> slotsNames;
+  private List<String> slotIds;
 
   public OutfitItem(Long id, Map<String, Property<?>> properties) {
     super(id, properties);
@@ -33,17 +33,32 @@ public class OutfitItem extends Item implements Outfit<OutfitItem> {
   @Override
   public List<OutfitItem> putOn(List<? extends Equippable<OutfitItem>> acceptors) {
     List<? extends Equippable<OutfitItem>> suitableAcceptors = acceptors.stream()
-        .filter(bp -> slotsNames.contains(bp.getName()))
+        .filter(acceptor -> slotIds.contains(acceptor.getSlotId()))
         .collect(Collectors.toList());
 
-    if (suitableAcceptors.size() >= slotsNames.size()) { //TODO: можно занять больше слотов чем требуется
-      return suitableAcceptors.stream()
-          .map(bp -> bp.equip(this))
-          .filter(Objects::nonNull)
-          .collect(Collectors.toList());
+    if (suitableAcceptors.size() >= slotIds.size() && !slotIds.isEmpty()) {
+      if (suitableAcceptors.size() == slotIds.size()) {
+        return suitableAcceptors.stream()
+            .map(acceptor -> acceptor.equip(this))
+            .filter(Objects::nonNull)
+            .collect(Collectors.toList());
+      }
+
+      ArrayList<OutfitItem> result = new ArrayList<>();
+      for (String slotId : slotIds) {
+        Equippable<OutfitItem> firstAcc = suitableAcceptors.stream()
+            .filter(acceptor -> slotId.equals(acceptor.getSlotId()))
+            .findFirst().get();
+        suitableAcceptors.remove(firstAcc);
+        OutfitItem unequip = firstAcc.equip(this);
+        if (Objects.nonNull(unequip)) {
+          result.add(unequip);
+        }
+      }
+      return result;
     }
 
-    return Collections.singletonList(this);
+    return List.of(this);
   }
 
   public Integer getArmor() {
